--- a/build.xml
+++ b/build.xml
@@ -928,6 +928,7 @@ QUICK BUILD (QUICK)
         <include name="library/**"/>
         <include name="continuations/**"/>
         <include name="swing/**"/>
+        <include name="xml/**"/>
         <include name="actors/**"/>
       </srcfiles>
     </uptodate>
@@ -1005,7 +1006,19 @@ QUICK BUILD (QUICK)
     </scalacfork>
   </target>
 
-  <target name="quick.lib.done" depends="quick.swing, quick.lib">
+  <target name="quick.xml" depends="quick.lib" unless="quick.lib.available">
+    <scalacfork
+      destdir="${build-quick.dir}/classes/library"
+      compilerpathref="locker.classpath"
+      params="${scalac.args.quick}"
+      srcdir="${src.dir}/xml"
+      jvmargs="${scalacfork.jvmargs}">
+      <include name="**/*.scala"/>
+      <compilationpath refid="quick.compilation.path"/>
+    </scalacfork>
+  </target>
+
+  <target name="quick.lib.done" depends="quick.swing, quick.xml, quick.lib">
     <stopwatch name="quick.lib.timer" action="total"/>
     <touch file="${build-quick.dir}/library.complete" verbose="no"/>
   </target>
@@ -1357,6 +1370,7 @@ PACKED QUICK BUILD (PACK)
     <jar destfile="${build-pack.dir}/lib/scala-library.jar">
       <fileset dir="${build-quick.dir}/classes/library">
         <exclude name="scala/swing/**"/>
+        <!--TODO <exclude name="scala/xml/**"/>-->
         <exclude name="scala/actors/**"/>
       </fileset>
       <fileset dir="${build-libs.dir}/classes/forkjoin"/>
@@ -1376,7 +1390,15 @@ PACKED QUICK BUILD (PACK)
     </jar>
   </target>
 
-  <target name="pack.pre-reflect" depends="pack.lib, pack.swing">
+  <target name="pack.xml" depends="pack.lib">
+    <jar destfile="${build-pack.dir}/lib/scala-xml.jar">
+      <fileset dir="${build-quick.dir}/classes/library">
+        <include name="scala/xml/**"/>
+      </fileset>
+    </jar>
+  </target>
+
+  <target name="pack.pre-reflect" depends="pack.lib, pack.swing, pack.xml">
     <uptodate
       property="pack.reflect.available"
       targetfile="${build-pack.dir}/lib/scala-reflect.jar"
@@ -1606,7 +1628,11 @@ OSGi Artifacts
     <make-bundle name="scala-swing" version="${osgi.version.number}"/>
   </target>
 
-  <target name="osgi.done" depends="osgi.bundles, osgi.bundles.swing"/>
+  <target name="osgi.bundles.xml" depends="osgi.init" unless="osgi.bundles.available">
+    <make-bundle name="scala-xml" version="${osgi.version.number}"/>
+  </target>
+
+  <target name="osgi.done" depends="osgi.bundles, osgi.bundles.swing, osgi.bundles.xml"/>
 
   <target name="osgi.test.init" depends="osgi.done">
     <path id="osgi.bundle.classpath">
@@ -1679,6 +1705,7 @@ BOOTSTRAPPING BUILD (STRAP)
       <srcfiles dir="${src.dir}">
         <include name="library/**"/>
         <include name="swing/**"/>
+        <include name="xml/**"/>
         <include name="actors/**"/>
       </srcfiles>
     </uptodate>
@@ -1756,7 +1783,19 @@ BOOTSTRAPPING BUILD (STRAP)
     </scalacfork>
   </target>
 
-  <target name="strap.lib.done" depends="strap.swing, strap.lib">
+  <target name="strap.xml" unless="strap.lib.available" depends="strap.lib">
+    <scalacfork
+      destdir="${build-strap.dir}/classes/library"
+      compilerpathref="pack.classpath"
+      params="${scalac.args.quick}"
+      srcdir="${src.dir}/xml"
+      jvmargs="${scalacfork.jvmargs}">
+      <include name="**/*.scala"/>
+      <compilationpath refid="strap.compilation.path"/>
+    </scalacfork>
+  </target>
+
+  <target name="strap.lib.done" depends="strap.swing, strap.xml, strap.lib">
     <touch file="${build-strap.dir}/library.complete" verbose="no"/>
     <stopwatch name="strap.lib.timer" action="total"/>
   </target>
@@ -2131,6 +2170,7 @@ DOCUMENTATION
       <source-includes>
         <include name="library/**"/>
         <include name="swing/**"/>
+        <include name="xml/**"/>
         <include name="actors/**"/>
         <include name="reflect/**"/>
       </source-includes>
@@ -2162,6 +2202,7 @@ DOCUMENTATION
         <files includes="${src.dir}/library"/>
         <files includes="${src.dir}/reflect"/>
         <files includes="${src.dir}/swing"/>
+        <files includes="${src.dir}/xml"/>
         <files includes="${src.dir}/continuations/library"/>
       </src>
       <include name="**/*.scala"/>
@@ -2403,6 +2444,7 @@ BOOTRAPING TEST AND TEST SUITE
       <compilationpath>
         <path refid="pack.classpath"/>
         <pathelement location="${pack.dir}/lib/scala-swing.jar"/>
+        <pathelement location="${pack.dir}/lib/scala-xml.jar"/>
         <fileset dir="${partest.dir}/files/lib" includes="*.jar" />
       </compilationpath>
       <runtests  dir="${partest.dir}/${partest.srcdir}/run" includes="*.scala"/>
@@ -2418,6 +2460,7 @@ BOOTRAPING TEST AND TEST SUITE
       <compilationpath>
         <path refid="pack.classpath"/>
         <pathelement location="${pack.dir}/lib/scala-swing.jar"/>
+        <pathelement location="${pack.dir}/lib/scala-xml.jar"/>
         <fileset dir="${partest.dir}/files/lib" includes="*.jar" />
       </compilationpath>
       <anttests dir="${partest.dir}/${partest.srcdir}/ant" includes="*build.xml"/>
@@ -2433,6 +2476,7 @@ BOOTRAPING TEST AND TEST SUITE
       <compilationpath>
         <path refid="pack.classpath"/>
         <pathelement location="${pack.dir}/lib/scala-swing.jar"/>
+        <pathelement location="${pack.dir}/lib/scala-xml.jar"/>
         <fileset dir="${partest.dir}/files/lib" includes="*.jar" />
       </compilationpath>
       <postests  dir="${partest.dir}/${partest.srcdir}/pos" includes="*.scala"/>
@@ -2574,6 +2618,7 @@ DISTRIBUTION
     <copy-bundle name="scala-library"/>
     <copy-bundle name="scala-reflect"/>
     <copy-bundle name="scala-swing"/>
+    <copy-bundle name="scala-xml"/>
     <copy-bundle name="scala-actors"/>
     <copy-bundle name="scala-compiler"/>
     <copy toDir="${dist.dir}/bin">
@@ -2628,6 +2673,9 @@ DISTRIBUTION
     </jar>
     <jar destfile="${dist.dir}/src/scala-swing-src.jar">
       <fileset dir="${src.dir}/swing"/>
+    </jar>
+    <jar destfile="${dist.dir}/src/scala-xml-src.jar">
+      <fileset dir="${src.dir}/xml"/>
     </jar>
     <jar destfile="${dist.dir}/src/scala-compiler-src.jar">
       <fileset dir="${src.dir}/compiler"/>
@@ -2715,6 +2763,7 @@ STABLE REFERENCE (STARR)
     <jar destfile="${basedir}/lib/scala-library-src.jar">
       <fileset dir="${basedir}/src/library"/>
       <fileset dir="${basedir}/src/swing"/>
+      <fileset dir="${basedir}/src/xml"/>
       <fileset dir="${basedir}/src/actors"/>
       <fileset dir="${basedir}/src/forkjoin"/>
     </jar>
@@ -2815,6 +2864,9 @@ POSITIONS
     </antcall>
     <antcall target="test.positions.sub" inheritRefs="true">
       <param name="test.srcs" value="${src.dir}/swing"/>
+    </antcall>
+    <antcall target="test.positions.sub" inheritRefs="true">
+      <param name="test.srcs" value="${src.dir}/xml"/>
     </antcall>
     <antcall target="test.positions.sub" inheritRefs="true">
       <param name="test.srcs" value="${src.dir}/partest"/>
