Improve OSGi test runner in Ant
 - Include pack/lib/*.jar in the uptodatecheck
   - (Hopefully that saves the next guy a few hours)
 - Switch the the XML formatter (I couldn't find output from the other one)
   and mention the output directory.

--- a/build.xml
+++ b/build.xml
@@ -1404,6 +1404,7 @@ TODO:
         <include name="build.xml"/>
         <include name="src/build/bnd/*.bnd"/>
       </srcfiles>
+      <srcfiles file="${build-pack.dir}/lib/*.jar"/>
     </uptodate>
 
     <if><not><isset property="osgi.bundles.available"/></not><then>
@@ -1464,6 +1465,7 @@ TODO:
   <target name="test.osgi" depends="test.osgi.comp">
     <stopwatch name="test.osgi.timer"/>
     <mkdir dir="${test.osgi.classes}"/>
+    <echo message="Running OSGi JUnit tests. Output in ${build-osgi.dir}"/>
     <junit fork="yes" haltonfailure="yes">
       <classpath refid="test.osgi.compiler.build.path"/>
       <batchtest fork="yes" todir="${build-osgi.dir}">
@@ -1471,7 +1473,7 @@ TODO:
           <include name="**/*Test.class"/>
         </fileset>
       </batchtest>
-      <formatter type="brief" /> <!-- silenced by having it use a file; I tried for an hour to use other formatters but classpath issues drove me to this usefile="false" -->
+      <formatter type="xml" /> <!-- silenced by having it use a file; I tried for an hour to use other formatters but classpath issues drove me to this usefile="false" -->
     </junit>
     <stopwatch name="test.osgi.timer" action="total"/>
   </target>
