--- a/src/intellij/scaladoc.iml.SAMPLE
+++ b/src/intellij/scaladoc.iml.SAMPLE
@@ -22,6 +22,6 @@
     <orderEntry type="module" module-name="compiler" />
     <orderEntry type="module" module-name="xml" />
     <orderEntry type="module" module-name="parser-combinators" />
-    <orderEntry type="module" module-name="partest" />
+    <orderEntry type="module" module-name="scaladoc-deps" level="project"/>
   </component>
 </module>
