Change math delimiter to ACUTE ACCENT (´)

--- a/spec/_includes/table-of-contents.yml
+++ b/spec/_includes/table-of-contents.yml
@@ -15,5 +15,9 @@
       {% endif %}
     {% endfor %}
   </ol>
-
 </div>
+
+<p class="print-only">
+  This document was generated from <a href="{{ site.baseurl}}/../{{ site.latestScalaVersion }}/">
+  HTML version of Scala {{ site.latestScalaVersion }} spec</a>
+</p>
