Remove (corrupt?) compiler bridge from travis cache
I can't figure out how, but it that the travis cache for
2.13.x since the recent restarr contains a compiler interface
that claims to be build with that STARR (2.13.0-M5-5eef812)
but still refers to the legacy encoding of overloaded
extension method names:

```
 # Run on Travis
$ javap -private -c -cp $HOME/.sbt/boot/scala-2.12.7/org.scala-sbt/sbt/1.2.8/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*.jar xsbt.ExtractAPI | grep -i extension
      39: invokevirtual #548                // Method scala/collection/ArrayOps$.map$extension:(Ljava/lang/Object;Lscala/Function1;Lscala/reflect/ClassTag;)Ljava/lang/Object;
     187: invokevirtual #684                // Method scala/collection/ArrayOps$.distinct$extension:(Ljava/lang/Object;)Ljava/lang/Object;
      51: invokevirtual #1047               // Method scala/collection/ArrayOps$.flatMap$extension1:(Ljava/lang/Object;Lscala/Function1;Lscala/Function1;Lscala/reflect/ClassTag;)Ljava/lang/Object;
     113: invokevirtual #548                // Method scala/collection/ArrayOps$.map$extension:(Ljava/lang/Object;Lscala/Function1;Lscala/reflect/ClassTag;)Ljava/lang/Object;
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,10 @@ jobs:
       - stage: build
         if: type = pull_request
         script:
-          - find $HOME/.sbt/boot/scala-2.12.7/org.scala-sbt/sbt/1.2.8/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*/ -name '*.jar'
-          - javap -private -c -cp $HOME/.sbt/boot/scala-2.12.7/org.scala-sbt/sbt/1.2.8/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*.jar xsbt.ExtractAPI | grep -i extension
-          - sbt evicted 'show compilers'
+          - rm -vrf $HOME/.sbt/boot/org.scala-sbt/sbt/1.2.7/org.scala-sbt-compiler-bridge*
+          - rm -vrf $HOME/.sbt/1.0/zinc/*
           - sbt setupPublishCore generateBuildCharacterPropertiesFile headerCheck publishLocal
+          - javap -private -c -cp $HOME/.sbt/boot/scala-2.12.7/org.scala-sbt/sbt/1.2.8/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*/org.scala-sbt-compiler-bridge_2.13.0-M2-1.2.5-bin_2.13.0-M5-5eef812__*.jar xsbt.ExtractAPI | grep -i extension
           - STARR=`cat buildcharacter.properties | grep ^maven.version.number | cut -d= -f2` && echo $STARR
           - sbt -Dstarr.version=$STARR -warn setupValidateTest test:compile info testAll
           - sbt -Dscala.build.compileWithDotty=true library/compile
